@startuml
skinparam classAttributeIconSize 0
skinparam classFontStyle bold

package "bookstore" {

    class User {
        id : int
        email : string
        firstName : string
        lastName : string
        phone : string
        dateOfBirth : DateTimeImmutable
        password : string
        roles : array
        isVerified : bool
        addresses : Collection<Address>
        cart : Cart
        orders : Collection<Order>
    }

    class Address {
        id : int
        user : User
        label : string
        streetLine1 : string
        streetLine2 : string
        city : string
        stateOrRegion : string
        postalCode : string
        countryCode : string
        additionalInfo : string
    }

    class Book {
        id : int
        title : string
        authors : list<string>
        description : text
        isbn13 : string
        price : int
        stock : int
        coverUrl : string
        publishedAt : DateTimeImmutable
        createdAt : DateTimeImmutable
        carts : Collection<Cart>
        orders : Collection<Order>
    }

    class Cart {
        id : int
        user : User
        cartItem : Collection<Book>
        addAt : DateTimeImmutable
    }

    class Order {
        id : int
        user : User
        orderItems : Collection<Book>
        totalAmount : int
        status : string
        createdAt : DateTimeImmutable
    }

    class ResetPasswordRequest {
        id : int
        user : User
        selector : string
        hashedToken : string
        requestedAt : DateTimeInterface
        expiresAt : DateTimeInterface
    }

    User "0..1" -- "0..*" Address : has
    User "1" -- "0..*" ResetPasswordRequest : requests
    User "1" -- "0..1" Cart : has
    User "0..1" -- "0..*" Order : places
    Cart "0..*" -- "0..*" Book : contains
    Order "0..*" -- "0..*" Book : contains
}

@enduml
